# modular-pos-system

./: .gitignore  CMakeLists.txt  CMakeLists.txt.backup  CMakeLists.txt.backup2  CMakeLists.txt.backup3  EVALUATION_SUMMARY.md  MakeFile  README.md  Readme.md.old.md  boostrap_setup.sh  build_and_run.sh  category_tiles_guide.md  cmake_config_addition.txt  cmake_config_fix.sh  immediate_bootstrap_fix.sh  pos_config.xml  pos_theme_css.css  quick_css_fix.sh  readme_md.txt  setup_bootstrap_resources.sh  styling_implementation_guide.md  subtle_styling_guide.md  ui_fix_guide.md  vscode_setup_guide.md  wt_config.xml  wt_config_solutions.md  wt_startup_guide.md
assets/css/: base.css  bootstrap-custom.css  main.css  pos-consistant-styles.css  pos-layout.css  responsive.css  theme-framework.css  theme-reactive.css  theme-warm.css  typography.css  utilities.css  webkit-transitions.css
assets/css/components/: button-components.css  form-components.css  header-components.css  kitchen-components.css  menu-components.css  modal-components.css  order-components.css  payment-components.css  pos-components.css  pos-dialogs.css  table-components.css
assets/css/themes/: colorful-theme.css  dark-theme.css  high-contrast.css  light-theme.css  restaurant-theme.css  theme-cool.css  theme-dark.css  theme-light.css
assets/themes/bootstrap/5/: bootstrap.css  theme.xml
config/: wt_config.xml copy.in  wt_config.xml.in
docs/: Debugging_modular_pos_system.md  LLM_QUERY_SERVICE_IMPLEMENTATION_GUIDE.md  OrderEntryFixes.md  active_orders_fix_instructions.md  api_integration_guide.md  architecture principals.md  clean_design_summary.md  complete_implementation_guide.md  complete_orderentrypanel_solution.txt  comprehensive_operating_manual.md  crash_fix_explanation.md  css-directory-structure.md  css_styling_fix_guide.md  data_model_analysis.md  development-progress-phased-approach.md  enhanced_migration_guide.md  enhanced_pos_demo.html  event_corruption_fix.md  event_logging_integration  event_logging_usage_examples.txt  final_crash_fix_summary.md  fix_currentorderdisplay_addwidget.txt  immediate_fix_steps.md  implementation_summary.md  integration_fix_guide.md  layout_fix_instructions.md  logging_configurations.md  logging_documentation.md  logging_framework_integration.md  modular_pos_structure.txt  modular_restaurant_pos_app.txt  notification_service_usage.txt  pos_service_header.txt  pos_services_logging  pos_workflow_summary.md  project_overview.md  quick_fix_guide.md  service_headers.txt  smart_toggle_summary.md  styling_integration_guide.md  (+11 more)
docs/phase 1/: preferences_usage_guide.md  styling_debug_guide.md
docs/phase 1 docs/: theme_system_guide.md
docs/phase 2 docs/: complete_implementation_summary.md  event_system_headers.txt  migration_plan.md  modular_cmake.txt  services_implementation_guide.md  services_implementation_summary.md  ui_components_headers.txt
include/: Employee.hpp  KitchenInterface.hpp  Order.hpp  OrderManager.hpp  PaymentProcessor.hpp  RestaurantPOSApp.hpp  RestaurantPOSApp.hpp.backup2
include/api/: APIClient.hpp  APIConfiguration.hpp  APIRepository.hpp  APIServiceFactory.hpp
include/api/repositories/: EmployeeRepository.hpp  MenuItemRepository.hpp  OrderRepository.hpp
include/backup/: MenuItem.hpp.backup
include/config/: DocRootConfig.hpp.in
include/core/: ConfigurationManager.hpp  RestaurantPOSApp.hpp
include/events/: EventManager.hpp  POSEvents.hpp
include/services/: EnhancedPOSService.hpp  LLMQueryService.hpp  NotificationService.hpp  POSService.hpp  ThemeService.hpp
include/ui/components/: ActiveOrdersDisplay.hpp  CommonFooter.hpp  CommonHeader.hpp  CurrentOrderDisplay.hpp  KitchenStatusDisplay.hpp  MenuDisplay.hpp  ModeSelector.hpp  OrderEntryPanel.hpp  OrderStatusPanel.hpp  ThemeSelector.hpp
include/ui/containers/: KitchenModeContainer.hpp  POSModeContainer.hpp
include/ui/dialogs/: CategoryPopover.hpp  PaymentDialog.hpp  ThemeSelectionDialog.hpp
include/ui/factories/: UIComponentFactory.hpp
include/utils/: CSSLoader.hpp  FormatUtils.hpp  Logging.hpp  LoggingUtils.hpp  ThemeDebugHelper.hpp  UIHelpers.hpp  UIStyleHelper.hpp
resources/css/: theme-light.css
resources/css/components/: common-components.css
resources/themes/bootstrap/5/: bootstrap.css
scripts/: project_diagnostic_script.sh  setup_themes.sh  setup_themes_simple.sh
src/: CMakeLists.txt  Employee.cpp  KitchenInterface.cpp  MenuItem.cpp  Order.cpp  OrderManager.cpp  PayMentProcessor.cpp  RestaurantPOSApp.cpp  main.cpp  theme-config.json
src/api/: APIClient.cpp  APIConfiguration.cpp
src/backup/: OrderManager.cpp.backup  PaymentProcessor.cpp.backup  main.cpp.backup
src/core/: ConfigurationManager.cpp  RestaurantPOSApp.cpp
src/events/: EventManager.cpp  POSEvents.cpp
src/services/: EnhancedPOSService.cpp  LLMQueryService.cpp  NotificationService.cpp  POSService.cpp  ThemeService.cpp
src/ui/components/: ActiveOrdersDisplay.cpp  CommonFooter.cpp  CommonHeader.cpp  CurrentOrderDisplay.cpp  KitchenStatusDisplay.cpp  MenuDisplay.cpp  ModeSelector.cpp  OrderEntryPanel.cpp  OrderStatusPanel.cpp  ThemeSelector.cpp
src/ui/containers/: KitchenModeContainer.cpp  POSModeContainer.cpp
src/ui/dialogs/: CategoryPopover.cpp  PaymentDialog.cpp  ThemeSelectionDialog.cpp
src/ui/factories/: UIComponentFactory.cpp
src/utils/: CSSLoader.cpp  FormatUtils.cpp  Logging.cpp  UIHelpers.cpp
static/: menu_workflow_css.css
static/css/: theme.css
test/: test_pos.cpp
themes/: base.css  bootstrap.css  category-tiles.css  classic.css  colorful.css  default_theme_css.css  green_theme_css.css  minimal_theme_css.css  professional.css
themes/old/: blue_theme_css.css  dark_theme_css.css
